force-app/main/default/objects/CO1__c/CO1__c.object-meta.xml
<CustomObject>
    <label>CO1</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CO1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CO1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>