force-app/main/default/objects/CO1__c/fields/CO2__c.field-meta.xml
<CustomField>
    <fullName>CO2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CO2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>