force-app/main/default/objects/CO1__c/fields/CO3__c.field-meta.xml
<CustomField>
    <fullName>CO3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CO3</label>
    <length>11</length>
    <type>Text</type>
</CustomField>