force-app/main/default/objects/CO1__c/fields/CO4__c.field-meta.xml
<CustomField>
    <fullName>CO4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CO4</label>
    <length>11</length>
    <type>Text</type>
</CustomField>